--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,41 +1,68 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar center text-center>
     <ion-title>
-      Tab One
+      <ion-icon color="medium" name="apps" style="font-size: 30px; vertical-align: middle"></ion-icon><a style="vertical-align: middle"> Dashboard</a>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+  <ion-card class="md-card-bg" center text-center>
+    <img src="https://i0.wp.com/www.meehayonline.com/wp-content/uploads/2018/04/30716469_1597732913677120_2778502635425103872_n.jpg?w=500">
+    <h2 class="md-card-title mbsc-align-center">Las Vegas</h2>
+    <h5 class="md-card-subtitle mbsc-align-center mbsc-bold">63 apartments available</h5>
+  </ion-card>
+
+  <ion-card center text-center>
+    <ion-card-header>
+      <ion-item>ควบคุมน้ำ</ion-item>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-icon color="red" name="power" style="zoom:20" name="power"></ion-icon>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-item>
+      <ion-icon name="speedometer" slot="start"></ion-icon>
+      <ion-label>ปริมาณน้ำที่ใช้</ion-label>
+      <ion-button fill="outline" slot="end">รายละเอียด</ion-button>
+    </ion-item>
+
+    <ion-card-content>
+      <ion-row>
+        <ion-col text-left>จำนวน</ion-col>
+        <ion-col text-right style="font-size: 30px">10000</ion-col>
+        <ion-col text-right>Unit</ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-grid center text-center>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-content><ion-icon style="zoom:7" name="clipboard" slot="start"></ion-icon></ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card>
+          <ion-card-content><ion-icon style="zoom:7" name="pie" slot="start"></ion-icon></ion-card-content>  
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-content><ion-icon style="zoom:7" name="calculator" slot="start"></ion-icon></ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card>
+          <ion-card-content><ion-icon style="zoom:7" name="contacts" slot="start"></ion-icon></ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
