--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="apps"></ion-icon>
       <ion-label>Tab One</ion-label>
     </ion-tab-button>
 
@@ -12,8 +12,18 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="apps"></ion-icon>
       <ion-label>Tab Three</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="apps"></ion-icon>
+      <ion-label>Tab Four</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab5">
+      <ion-icon name="apps"></ion-icon>
+      <ion-label>Tab Five</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
