--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,22 +7,22 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="clipboard"></ion-icon>
       <ion-label>Tab Two</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="pie"></ion-icon>
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="calculator"></ion-icon>
       <ion-label>Tab Four</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="contacts"></ion-icon>
       <ion-label>Tab Five</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
